--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@biomejs/biome": "2.0.6",
     "@tsconfig/node21": "^21.0.4",
     "@types/node": "^24.0.10",
+    "drizzle-kit": "^0.31.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "ultracite": "5.0.32"
@@ -22,6 +23,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "dotenv": "^17.1.0",
+    "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
     "postgres": "^3.4.7",
