--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsconfig/node21": "^21.0.4",
     "@types/node": "^24.0.10",
     "drizzle-kit": "^0.31.4",
+    "drizzle-seed": "^0.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "ultracite": "5.0.32"
