--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:seed": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/db/seed.ts"
   },
   "keywords": [],
   "author": "Jfdeev",
