--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:seed": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/db/seed.ts"
+    "db:seed": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/db/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "Jfdeev",
