--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/server.ts",
+    "dev": "tsx watch --env-file=.env src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:seed": "node --env-file .env --loader ts-node/esm --no-warnings --watch src/db/seed.ts",
     "db:generate": "drizzle-kit generate",
@@ -21,6 +21,7 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-seed": "^0.3.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.8.3",
     "ultracite": "5.0.32"
   },
