--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,17 +2,15 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "_version": "21.0.0",
   "compilerOptions": {
-    "lib": [
-      "es2023"
-    ],
+    "lib": ["es2023"],
     "module": "nodenext",
+    "moduleResolution": "nodenext",
     "target": "es2022",
     "noEmit": true,
     "allowImportingTsExtensions": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16",
     "strictNullChecks": true
   }
 }
