--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "@google/genai": "^1.14.0",
     "dotenv": "^17.1.0",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
