--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@google/genai": "^1.14.0",
     "dotenv": "^17.1.0",
     "drizzle-orm": "^0.44.3",
